# construct

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
construct/: __init__.py  adapter.py  architect.py  cast.py  cli.py  clock.py  cohorts.py  discord_bot.py  foyer.py  game.py  gauge.py  imagery.py  library.py  loopback.py  pins.py  play_styles.py  play_styles_data.py  provider.py  registry.py  reshape.py  resolution.py  semantics.py  session.py  setup.py  snapreads.py  story_shapes.py  telegram_bot.py  transport_core.py  turnloop.py
docs/: CONCEPT.md  DISCORD.md  LEXICON.md
examples/: README.md
holodeck/: __init__.py  adapter.py  cli.py  cohorts.py  game.py  provider.py  snapreads.py  turnloop.py
scripts/: anchor_delivery_probe.py  architect_demo.py  author_cast_demo.py  backfill_game_types.py  backfill_genres.py  backfill_premise.py  beat_delivery_check.py  beat_delivery_e2e.py  beat_delivery_replay.py  beat_delivery_replay_v3.py  build_play_styles.py  build_presets.py  classify_asks_probe.py  codex_image_probe.py  commitment_effect_probe.py  cross_suspicion_demo.py  debug_emberroad_horizon.py  diag_interview_spine.py  diag_placement_roles.py  examine_whodunit_demo.py  final_exhaustive.py  four_world_live.py  foyer_demo.py  gauge_codex.py  gauge_play.py  liveplay_memory.py  liveplay_p1.py  liveplay_p2.py  makereal_acceptance.py  narrator_ab.py  play_harness.py  reauthor_intros.py  rebuild_emberroad.py  refine_validation.py  reshape_live_proof.py  restamp_probe.py  shape_play_probe.py  shape_sweep.py  signature_live_check.py  (+12 more)
(+109 files in other folders)
