[project]
name = "holodeck"
version = "0.0.1"
description = "A text holodeck: persistent interactive fiction hosted on the pattern-buffer engine"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.scripts]
holodeck = "holodeck.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["holodeck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
